UPD install 2, ADD organisms

--- a/www/index.html
+++ b/www/index.html
@@ -559,23 +559,20 @@
                   <div class="col-4" id="gene_organism_options_c">
                     <h4>Annotation by organism</h4>
                     <div class="organism_icon_c">
-                      <button id="annot_organism_1" class="icon-organism" data-organism-id="1" data-toggle="tooltip" data-placement="top" title="Mouse">
-                        <img src="./img/icons/org-1-light-64.svg" alt="Mouse" />
+                      <button id="annot_organism_1" class="icon-organism" data-organism-id="1" data-toggle="tooltip" data-placement="top" title="Human">
+                        <img src="./img/icons/org-1-light-64.svg" alt="Human" />
                       </button>
-                      <button id="annot_organism_2" class="icon-organism" data-organism-id="2" data-toggle="tooltip" data-placement="top" title="Human">
-                        <img src="./img/icons/org-2-light-64.svg" alt="Human" />
+                      <button id="annot_organism_2" class="icon-organism" data-organism-id="2" data-toggle="tooltip" data-placement="top" title="Mouse">
+                        <img src="./img/icons/org-2-light-64.svg" alt="Mouse" />
                       </button>
-                      <button id="annot_organism_3" class="icon-organism" data-organism-id="3" data-toggle="tooltip" data-placement="top" title="Zebrafish">
-                        <img  src="./img/icons/org-3-light-64.svg" alt="Zebrafish" />
+                      <button id="annot_organism_3" class="icon-organism" data-organism-id="3" data-toggle="tooltip" data-placement="top" title="Rat">
+                        <img  src="./img/icons/org-3-light-64.svg" alt="Rat" />
                       </button>
-                      <button id="annot_organism_5" class="icon-organism" data-organism-id="5" data-toggle="tooltip" data-placement="top" title="Chicken">
-                        <img src="./img/icons/org-5-light-64.svg" alt="Chicken" />
+                      <button id="annot_organism_4" class="icon-organism" data-organism-id="4" data-toggle="tooltip" data-placement="top" title="Pig">
+                        <img src="./img/icons/org-4-light-64.svg" alt="Pig" />
                       </button>
-                      <button id="annot_organism_6" class="icon-organism" data-organism-id="6" data-toggle="tooltip" data-placement="top" title="Rat">
-                        <img src="./img/icons/org-6-light-64.svg" alt="Rat" />
-                      </button>
-                      <button id="annot_organism_7" class="icon-organism" data-organism-id="7" data-toggle="tooltip" data-placement="top" title="Marmoset">
-                        <img src="./img/icons/org-7-light-64.svg" alt="Marmoset" />
+                      <button id="annot_organism_5" class="icon-organism" data-organism-id="5" data-toggle="tooltip" data-placement="top" title="Zebrafish">
+                        <img src="./img/icons/org-5-light-64.svg" alt="Zebrafish" />
                       </button>
                     </div>
                   </div>
