UPD contact form

--- a/www/contact.html
+++ b/www/contact.html
@@ -73,8 +73,8 @@
               <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content">
                   <div class="modal-body">
-                    <p>By clicking "OK", you acknowledge that your question or comment has no private data within and will be posted as an issue in the public IGS/gEAR Github repository.</p>
-                    <p>If there is private data, please click "Cancel" and check the "private data" checkbox on the form</p>
+                    <p>By clicking "OK", you acknowledge that your question or comment does not contain private data and will be posted as an issue on the public DHART (dieterich-lab/gEAR) GitHub repository.</p>
+                    <p>If there is private data, please click "Cancel" and check the "private data" checkbox on the form!</p>
                   </div>
                   <div class="modal-footer">
                     <button type="submit" id="actual_submit" class="btn btn-primary">OK</button>
