--- a/www/index.html
+++ b/www/index.html
@@ -271,7 +271,7 @@
             </div>
             <div class="card-body">
               <div class="youtube-video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/sr_kvm7W4OE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sr_kvm7W4OE" srcdoc="DHART video documentation coming soon!" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
             <div class="card-footer bg-white">
