UPD post-workshop

--- a/www/index.html
+++ b/www/index.html
@@ -270,9 +270,15 @@
               <h3><img src="./img/icons/drives_purple.png" /> Getting started video</h3>
             </div>
             <div class="card-body">
-              <div class="youtube-video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/sr_kvm7W4OE" srcdoc="DHART video documentation coming soon!" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
+		<div> <!--class="youtube-video-container" -->
+                	<a href="https://cloud.crc1550.com/index.php/s/qFSCFMkNiY7fYQ7" target="_blank">
+  				<img alt="CardioCloud" src="./img/cardiocloud.png" width=150" height="70">
+			</a>
+			<br />
+			<u><a href="https://cloud.crc1550.com/index.php/s/qFSCFMkNiY7fYQ7" target="_blank">Use Cases (how to use DHART), D-DAP DZHK workshop tutorials, and more.</a></u> 
+                	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/sr_kvm7W4OE" srcdoc="DHART video documentation coming soon!" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			-->
+	      	</div>
             </div>
             <div class="card-footer bg-white">
               <div class="section_launcher section_launcher_single" id="launcher_manual">
